hphp/hack/test/typecheck/fc_enum_17.php.exp
File "fc_enum_17.php", line 9, characters 3-4:
Was expecting a class, but got a value of enum Foo (Typing[4026])
